[package]
name = "creeperUI"
version = "0.1.5"
edition = "2021"
description = "An imgui inspired Immediate mode GUI library for Macroquad."
license = "MIT"
repository = "https://github.com/creepersaur/creeperUI"

[dependencies]
macroquad = "0.4.14"
indexmap = "2"
owo-colors = "4.2.2"

[profile.release]
opt-level = 3