[package]
name = "creeperUI"
version = "0.1.11"
edition = "2021"
description = "An dearimgui inspired Immediate mode GUI library for Macroquad. ( imgui )"
license = "MIT"
repository = "https://github.com/creepersaur/creeperUI"

[dependencies]
macroquad = "0.4.14"
indexmap = "2"
arboard = "3.6.1"
owo-colors = "4.2.2"

[profile.release]
opt-level = 3